# money-teste

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  teste.py
alembic/: env.py
alembic/versions/: 3d41861b14a0_create_base_tables.py  82b84d4aafa5_add_field_text_and_remove_question_and_.py  baef462cd532_add_column_signed_contract_in_client_.py
app/: __init__.py
app/configs/: settings.py
app/controllers/clients/: __init__.py  check_eligibility_client_controller.py  deactivate_client_controller.py  get_client_by_id_controller.py  get_list_of_stage_controller.py  get_pipeline_cards_controller.py  pending_clients_controller.py  send_contract_controller.py  update_client_controller.py  update_stage.py  update_stage_controller.py  webhook_contract_signed_controller.py
app/crud/: client_operation_crud.py  client_operations_crud.py  clients_crud.py  motor_runnings_crud.py  operations_crud.py  timelines_crud.py
app/exceptions/: __init__.py  credential_exception.py  validation_exception_handler.py  value_not_found_exception.py
app/helpers/: cpf.py  get_current_username.py  run_func_async.py  validate_token.py
app/models/: __init__.py  client_operations.py  clients.py  motor_runnings.py  notifications.py  operations.py  tasks.py  timelines.py
app/routes/: __init__.py  clients.py  health.py  landing_page.py  motor_runnings.py  operations.py
app/schemas/: __init__.py  clients_schemas.py  landing_page.py  responses_schemas.py
app/worker/: __init__.py  celery.py
app/worker/jobs/: __init__.py  (+2 more)
(+12 files in other folders)
