[tool.poetry]
name = "recdin-money-api"
version = "0.1.0"
description = ""
authors = ["matheusburey <matheushburei.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.1"
requests = "^2.31.0"
python-multipart = "^0.0.6"
pandas = "^2.1.0"
redis = "^5.0.0"
flower = "^2.0.1"
celery = "^5.3.4"
capmonster-python = "^2.4.1"
boto3 = "^1.28.55"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
